--- a/fronted/src/app/components/Tienda/articulos/articulos.component.html
+++ b/fronted/src/app/components/Tienda/articulos/articulos.component.html
@@ -1,30 +1,28 @@
-<!-- articulos.component.html -->
 <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-4 col-sm-6 col-12 mb-4" *ngFor="let producto of productos; let i = index">
-        <div class="card card-Produc custom-card h-80">
-          <img [src]="'http://localhost:3000/' + producto.imagePath" class="card-img-top w-80" style="height: 200px;">
-          <div class="card-header">
-            <ng-container *ngIf="producto.title">{{ producto.title }}</ng-container>
+  <div class="row">
+    <div class="col-md-4 col-sm-6 col-12 mb-4" *ngFor="let producto of productos">
+      <div class="card card-Produc custom-card h-80">
+        <img [src]="'http://localhost:3000/' + producto.imagePath" class="card-img-top w-80" style="height: 200px;">
+        <div class="card-header">
+          <ng-container *ngIf="producto.title">{{ producto.title }}</ng-container>
+        </div>
+        <div class="card-body">
+          <div class="slogan">
+            <ng-container *ngIf="producto.description">{{ producto.description }}</ng-container>
           </div>
-          <div class="card-body">
-            <div class="slogan">
-              <ng-container *ngIf="producto.description">{{ producto.description }}</ng-container>
-            </div>
-            <br>
-            <ng-container *ngIf="producto.price">
-              <i class="fas fa-dollar-sign"></i> Precio por pieza: $ {{ producto.price }}
-            </ng-container>
-            <br>
-            <div>
-              <button class="btn btn-primary" (click)="agregarAlCarrito(producto)">
-                <i class="fas fa-shopping-cart"></i> Agregar al carrito
-                <i *ngIf="estaEnCarrito(producto)" class="fas fa-check-circle"></i>
-              </button>
-            </div>
+          <br>
+          <ng-container *ngIf="producto.price">
+            <i class="fas fa-dollar-sign"></i> Precio por pieza: $ {{ producto.price }}
+          </ng-container>
+          <br>
+          <div>
+            <button class="btn btn-primary" (click)="agregarAlCarrito(producto)">
+              <i class="fas fa-shopping-cart"></i> Agregar al carrito
+              <i *ngIf="estaEnCarrito(producto)" class="fas fa-check-circle"></i>
+            </button>
           </div>
         </div>
       </div>
     </div>
   </div>
-  
+</div>
