--- a/fronted/src/styles.scss
+++ b/fronted/src/styles.scss
@@ -2,6 +2,7 @@
 /* src/styles.scss */
 @import '~bootstrap/dist/css/bootstrap.css';
 @import "~@fortawesome/fontawesome-free/css/all.css";
+@import "../node_modules/bootstrap-icons/font/bootstrap-icons.css";
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
