--- a/fronted/src/app/components/Compartidos/footer/footer.component.html
+++ b/fronted/src/app/components/Compartidos/footer/footer.component.html
@@ -10,12 +10,12 @@
        </div>
         <div class="address">
             <div class="icon-container">
-            <a href="https://www.facebook.com/sharer/sharer.php?u=URL_DE_TU_PAGINA" class="icon facebook-icon"><i 
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://grupoflores.netlify.app/home" class="icon facebook-icon"><i 
             class="fab fa-facebook"></i></a>
-            <a href="whatsapp://send?text=URL_DE_TU_PAGINA" class="icon whatsapp-icon"><i class="fab fa-whatsapp"></i></a>
-            <a href="https://www.messenger.com/share?url=URL_DE_TU_PAGINA" class="icon messenger-icon"><i class="fab 
+            <a href="whatsapp://send?text=https://grupoflores.netlify.app/home" class="icon whatsapp-icon"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://www.messenger.com/share?url=https://grupoflores.netlify.app/home" class="icon messenger-icon"><i class="fab 
             fa-facebook-messenger"></i></a>
-              <a href="https://www.instagram.com/?url=URL_DE_TU_PAGINA" class="icon instagram-icon"><i class="fab 
+              <a href="https://www.instagram.com/?url=https://grupoflores.netlify.app/home" class="icon instagram-icon"><i class="fab 
             fa-instagram"></i></a>
             <!-- Agrega más enlaces con íconos y colores para otras plataformas si lo deseas -->
           </div>
