--- a/fronted/src/app/components/Tienda/carrito-compras/carrito-compras.component.html
+++ b/fronted/src/app/components/Tienda/carrito-compras/carrito-compras.component.html
@@ -45,7 +45,7 @@
   <div *ngIf="productosEnCarrito.length === 0">
     <!-- Vista cuando el carrito está vacío -->
     <div class="text-center mt-5">
-      <img src="ruta/a/imagen_carrito_vacio.jpg" alt="Carrito Vacío" class="img-fluid">
+      <img src="./assets/imagenes/carrito.png" alt="Carrito Vacío" class="img-fluid">
       <h3 class="producto-titulo">Carrido Vacío</h3>
       <p>No tienes ningún producto en tu carrito</p>
       <button class="btn btn-primary btn-colorido" (click)="redirigirACompras()">
