7/10/24 carrito de compra usuario y productos

--- a/fronted/src/app/components/Productos/subir-producto/subir-producto.component.html
+++ b/fronted/src/app/components/Productos/subir-producto/subir-producto.component.html
@@ -10,6 +10,10 @@
           <option value="Block Pesado">Block Pesado </option>
           <option value="Block de cocol ">Block de cocol</option>
           <option value="Block de color ">Block de color</option>
+          <option value="Block de curva ">Block de curva</option>
+          <option value="Tabicon ligero ">Tabicon ligero</option>
+          <option value="Tabicon pesado ">Tabicon pesado</option>
+          <option value="Block Tronchado ">Block Tronchado</option>
         </select>
       </div>
       
