--- a/fronted/src/app/components/Tienda/carrito-compras/carrito-compras.component.html
+++ b/fronted/src/app/components/Tienda/carrito-compras/carrito-compras.component.html
@@ -36,7 +36,7 @@
       <button class="btn btn-primary" (click)="redirigirACompras()">
         <i class="bi bi-cart"></i> Seguir Comprando
       </button>
-      <button class="btn btn-success" >
+      <button class="btn btn-success" (click)="continuarCompra()" >
         Continuar
       </button>
     </div>
