--- a/fronted/src/app/components/Compartidos/dropdown-menu/dropdown-menu.component.html
+++ b/fronted/src/app/components/Compartidos/dropdown-menu/dropdown-menu.component.html
@@ -108,9 +108,9 @@
               <!-- Submenú "Datos de la Cuenta" -->
               <button mat-menu-item routerLink="/datos-cuenta">Datos de la Cuenta</button>
               <!-- Submenú "Seguridad" -->
-              <button mat-menu-item routerLink="/seguridad">Seguridad</button>
+              <button mat-menu-item routerLink="/dashboard/Address/direccion_lista">Seguridad</button>
               <!-- Submenú "Direcciones" -->
-              <button mat-menu-item routerLink="/direcciones">Direcciones</button>
+              <button mat-menu-item routerLink="/dashboard/Address/direccion_fom">Direcciones</button>
               <mat-divider></mat-divider>
               <button mat-menu-item (click)="authService.logout()">Cerrar Sesión</button>
 
